<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_padding_h"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/registrationPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_title_top_margin"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/page_title"
        android:textSize="@dimen/page_title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name_label"
            android:paddingVertical="@dimen/form_field_padding_v">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_index_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_index_number_label"
            android:paddingVertical="@dimen/form_field_padding_v">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_college_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_college_label"
            android:paddingVertical="@dimen/form_field_padding_v">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/form_field_padding_v">

            <TextView
                android:id="@+id/form_level_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/form_level_label"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/form_level_100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_level_100_label"
                        android:layout_weight="1"
                        android:onClick="setLevel" />

                    <RadioButton
                        android:id="@+id/form_level_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_level_200_label"
                        android:layout_weight="1"
                        android:onClick="setLevel" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/form_level_300"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_level_300_label"
                        android:layout_weight="1"
                        android:onClick="setLevel" />

                    <RadioButton
                        android:id="@+id/form_level_400"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_level_400_label"
                        android:layout_weight="1"
                        android:setLevel="setLevel" />

                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/form_field_padding_v">

            <TextView
                android:id="@+id/form_gpa_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/form_gpa_label"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/form_gpa_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0.00"
                android:valueTo="4.00"
                android:stepSize="0.01" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveDetails"
        android:text="@string/save_btn_text" />

</LinearLayout>